[package]
name = "smbpndk-cli"
version = "0.2.0"
edition = "2021"
description = "Command line tool for creating and managing SmbPndk resources."
license = "Apache-2.0"
repository = "https://github.com/smbpndk/smbpndk-cli"
documentation = "https://docs.smbpndk.com/cli"
keywords = ["cli", "cloud", "developer", "platform"]
categories = ["command-line-utilities"]

[[bin]]
name = "smb"
path = "src/main.rs"

[dependencies]
dirs = "4.0.0"
anyhow = "1.0.58"
clap = { version = "4.1.6", features = ["derive"] }
console = "0.15.0"
dialoguer = { git = "https://github.com/qt2/dialoguer.git", branch ="password_validation", package = "dialoguer" }
home = "0.5.4"
regex = "1.3.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.82"
spinners = "4.1.0"
tokio = { version = "1.14.1", features = ["full"] }
tracing = { version = "0.1.35", features = ["log"] }
tracing-bunyan-formatter = "0.3.3"
tracing-subscriber = { version = "0.3.14", features = ["registry", "env-filter"] }
