[package]
name = "app-fun"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
anyhow = "1.0.58"
smbpndk-model = { path = "../smbpndk-model" }
spinners = "4.1.0"
console = "0.15.0"
dialoguer = "0.10.4"