[package]
name = "app-fun"
version = "0.3.2"
edition = "2021"
authors = ["Seto Elkahfi <hej@setoelkahfi.se>"]
description = "Command line tool for creating and managing SmbPndk resources."
license = "Apache-2.0"
repository = "https://github.com/smbpndk/smbpndk-cli"
documentation = "https://docs.smbpndk.com/cli"
keywords = ["cli", "cloud", "web2", "web3", "smbpndk"]
categories = ["command-line-utilities", "command-line-interface", "cryptography::cryptocurrencies", "development-tools", "wasm"]
readme = "../README.md"

[dependencies]
anyhow = "1.0.58"
clap = { version = "4.1.6", features = ["derive"] }
console = "0.15.0"
dialoguer = "0.10.4"
smbpndk-model = { path = "../smbpndk-model" }
spinners = "4.1.0"
