[package]
name = "app-oten"
version = "0.3.3"
edition = "2021"
authors = ["Seto Elkahfi <hej@setoelkahfi.se>"]
description = "Command line tool for creating and managing SmbPndk resources."
license = "Apache-2.0"
repository = "https://github.com/smbpndk/smbpndk-cli"
documentation = "https://docs.smbpndk.com/cli"
keywords = ["cli", "cloud", "web2", "web3", "smbpndk"]
categories = ["command-line-utilities", "command-line-interface", "cryptography::cryptocurrencies", "development-tools", "wasm"]
readme = "../README.md"

[dependencies]
anyhow = "1.0.58"
async-trait = { version = "0.1.51", optional = true }
clap = { version = "4.1.6", features = ["derive"] }
console = "0.15.0"
dialoguer = "0.10.4"
dirs = "4.0.0"
home = "0.5.4"
log = "0.4.14"
maybe-async = { version = "0.2", features = ["is_sync"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.82"
smbpndk-model = { version = "0.3", path = "../smbpndk-model" }
smbpndk-networking = { version = "0.3", path = "../smbpndk-networking" }
smbpndk-utils = { version = "0.3", path = "../smbpndk-utils" }
spinners = "4.1.0"
thiserror = "1.0.29"
