[package]
name = "app-pkt"
version = "0.2.3"
edition = "2021"
authors = ["Seto Elkahfi <hej@setoelkahfi.se>"]
description = "Command line tool for creating and managing SmbPndk resources."
license = "Apache-2.0"
repository = "https://github.com/smbpndk/smbpndk-cli"
documentation = "https://docs.smbpndk.com/cli"
keywords = ["cli", "cloud", "developer", "platform"]
categories = ["command-line-utilities", "cloud", "modular", "web2", "web3", "smbpndk"]
readme = "../README.md"

[dependencies]
