[package]
name = "smbpndk-cli"
version = "0.2.3"
edition = "2021"
authors = ["Seto Elkahfi <hej@setoelkahfi.se>"]
description = "Command line tool for creating and managing SmbPndk resources."
license = "Apache-2.0"
repository = "https://github.com/smbpndk/smbpndk-cli"
documentation = "https://docs.smbpndk.com/cli"
keywords = ["cli", "cloud", "developer", "platform"]
categories = ["command-line-utilities", "cloud", "modular", "web2", "web3", "smbpndk"]
readme = "../README.md"

[[bin]]
name = "smb"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.58"
app-fun = { path = "../app-fun" }
app-oten = { path = "../app-oten" }
app-pkt = { path = "../app-pkt" }
app-rdb = { path = "../app-rdb" }
clap = { version = "4.1.6", features = ["derive"] }
clap_mangen = "0.2.10"
console = "0.15.0"
dialoguer = "0.10.4"
dirs = "4.0.0"
dotenv = "0.15.0"
home = "0.5.4"
log = "0.4.14"
open = "4.0.1"
pre-commit-hooks = "0.1"
regex = "1.3.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.82"
smbpndk-model = { path = "../smbpndk-model" }
smbpndk-networking = { path = "../smbpndk-networking" }
smbpndk-networking-project = { path = "../smbpndk-networking-project" }
smbpndk-utils = { path = "../smbpndk-utils" }
spinners = "4.1.0"
tokio = { version = "1.14.1", features = ["full"] }
tracing = { version = "0.1.35", features = ["log"] }
tracing-bunyan-formatter = "0.3.3"
tracing-subscriber = { version = "0.3.14", features = ["registry", "env-filter"] }
url-builder = "0.1.1"
