[package]
name = "smbpndk-networking-auth-app"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
async-trait = { version = "0.1.51", optional = true }
dirs = "4.0.0"
home = "0.5.4"
log = "0.4.14"
maybe-async = { version = "0.2", features = ["is_sync"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.82"
smbpndk-model = { path = "../smbpndk-model" }
smbpndk-networking = { path = "../smbpndk-networking" }
thiserror = "1.0.29"
