[package]
name = "smbpndk-networking"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.29"
async-trait = { version = "0.1.51", optional = true }
log = "0.4.14"
maybe-async = { version = "0.2", features = ["is_sync"] }