[package]
name = "smbpndk-utils"
version = "0.2.3"
edition = "2021"
authors = ["Seto Elkahfi <hej@setoelkahfi.se>"]
description = "Command line tool for creating and managing SmbPndk resources."
license = "Apache-2.0"
repository = "https://github.com/smbpndk/smbpndk-cli"
documentation = "https://docs.smbpndk.com/cli"
keywords = ["cli", "cloud", "developer", "platform"]
categories = ["command-line-utilities", "cloud", "modular", "web2", "web3", "smbpndk"]
readme = "../README.md"

[dependencies]
anyhow = "1.0.58"
dirs = "4.0.0"
home = "0.5.4"
log = "0.4.14"
regex = "1.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.82"
smbpndk-model = { path = "../smbpndk-model" }
