[package]
name = "smbpndk-utils"
version = "0.3.1"
edition = "2021"
authors = ["Seto Elkahfi <hej@setoelkahfi.se>"]
description = "Command line tool for creating and managing SmbPndk resources."
license = "Apache-2.0"
repository = "https://github.com/smbpndk/smbpndk-cli"
documentation = "https://docs.smbpndk.com/cli"
keywords = ["cli", "cloud", "web2", "web3", "smbpndk"]
categories = ["command-line-utilities", "command-line-interface", "cryptography::cryptocurrencies", "development-tools", "wasm"]
readme = "../README.md"

[dependencies]
anyhow = "1.0.58"
dirs = "4.0.0"
home = "0.5.4"
log = "0.4.14"
regex = "1.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.82"
smbpndk-model = { version = "0.3", path = "../smbpndk-model" }
